Revise professional summary in index.html
Updated the professional summary to reflect over six years of experience and expertise in various development areas, including AI-assisted tools.

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                       <span class="ah-words-wrapper">
                         <b class="is-visible">Ahmed Faraz</b>
                         <b>Frontend Developer</b>
+                        <b>Backend Developer</b>
                         <b>Fullstack Developer</b>
                         <b>Mobile Developer</b>
                       </span>
@@ -227,33 +228,7 @@
               <h2>Ahmed Faraz</h2>
               <h3>Frontend / Fullstack / Mobile Developer</h3>
               <p>
-                With six years of diverse experience spanning Frontend,
-                Fullstack, and Mobile App development, I bring a wealth of
-                expertise to every project. My proficiency extends to MEAN and
-                MERN stacks, as well as AWS development, reflecting a
-                comprehensive understanding of modern technologies and
-                platforms. My career journey has been marked by versatility and
-                adaptability, having navigated projects across various scales
-                and environments. From spearheading Minimum Viable Products
-                (MVPs) to contributing to startup initiatives, collaborating
-                within enterprise settings, and thriving in freelance endeavors,
-                I've honed my skills in diverse contexts. One of my key
-                strengths lies in my excellent communication and leadership
-                abilities. I excel in articulating complex technical concepts
-                with clarity, fostering alignment across teams, and driving
-                project success through effective collaboration. My leadership
-                style prioritizes empowerment, creating an environment where
-                every team member feels valued and motivated to contribute their
-                best. Moreover, I possess extensive experience working in both
-                small and large teams, where I've demonstrated the capacity to
-                adapt to dynamic challenges while maintaining a focus on
-                delivering exceptional results. Whether it's guiding a startup
-                through its initial stages or seamlessly integrating with
-                established enterprise frameworks, I bring a proactive and
-                solution-oriented approach to every endeavor. In essence, my
-                portfolio reflects a blend of technical expertise, leadership
-                acumen, and a proven track record of delivering value across a
-                spectrum of projects and environments.
+                With over six years of experience across Frontend, Backend, Full-Stack, and Mobile App development, I have built and scaled applications across startups and enterprise environments. I bring strong expertise in MEAN and MERN stacks, cloud platforms, and modern architectures, while also leveraging AI-assisted tools such as OpenAI APIs and Cursor to improve development efficiency and code quality. Known for clear communication and collaborative leadership, I effectively translate complex technical ideas into actionable solutions and consistently deliver high-impact, scalable products.
               </p>
               <a
                 href="images/about/Ahmed-Faraz_Resume.pdf"
